fix padding on form inputs + invisible texte on main input search + remove useless commented CSS

--- a/assets/styles/_main.scss
+++ b/assets/styles/_main.scss
@@ -38,9 +38,6 @@ body {
 #SEARCH {
 	grid-column: 1/3;
 	grid-row: 2;
-	// display: flex;
-	// justify-content: space-between;
-	// align-items: center;
 	background-color: $orange;
 	display: flex;
 
@@ -55,6 +52,10 @@ body {
 
 	input::placeholder {
 		color: $blue;
+	}
+
+	input:focus::placeholder {
+		opacity: 0;
 	}
 }
 
