--- a/assets/styles/projectForm.scss
+++ b/assets/styles/projectForm.scss
@@ -1,17 +1,19 @@
-.form-box{
-    background-image: url('../src/image/triangle.png');
-    background-repeat: no-repeat;
-    background-position: 45% 10px;
-    form{
-        margin-top: 2rem;
-        input{
-            border-radius: 5px;
-        }
-        textarea{
-            border-radius: 5px;
-        }
-        select{
-            border-radius: 5px;
-        }
-    }
+.form-box {
+	background-image: url("../src/image/triangle.png");
+	background-repeat: no-repeat;
+	background-position: 45% 10px;
+	form {
+		margin-top: 2rem;
+		input {
+			border-radius: 5px;
+			padding: 0 10px;
+		}
+		textarea {
+			border-radius: 5px;
+			padding: 0 10px;
+		}
+		select {
+			border-radius: 5px;
+		}
+	}
 }
